--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-ionicons": "^2.1.6",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.13.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
