feat: Deploy by vercel

--- a/package.json
+++ b/package.json
@@ -26,12 +26,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "concurrently \"react-scripts start\" \"npm run mock\"",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "mock": "json-server --watch db.json --port 3004"
+  "start": "vercel dev",
+  "build": "react-scripts build",
+  "vercel-build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
