--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "name": "project",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -26,9 +29,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  "start": "vercel dev",
-  "build": "react-scripts build",
-  "vercel-build": "react-scripts build"
+    "start": "node server.js",
+    "dev": "concurrently \"react-scripts start\" \"npm run mock\"",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "mock": "json-server --watch db.json --port 3004"
   },
   "eslintConfig": {
     "extends": [
