--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "concurrently \"react-scripts start\" \"npm run mock\"",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "mock": "json-server --watch db.json --port 3004"
-  },
+  "start": "node server.js",
+  "build": "react-scripts build",
+  "dev": "concurrently \"react-scripts start\" \"node server.js\"",
+  "test": "react-scripts test --env=jsdom",
+  "eject": "react-scripts eject"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
