--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "rewrites": [
-      { "source": "/api/:path*", "destination": "/api/db.js" }
+      { "source": "/api/:path*", "destination": "/api/:path*" }
     ]
   }
   
